--- a/src/1_embeddings.ipynb
+++ b/src/1_embeddings.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -13,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cosine Distance\n",
+    "## Cosine simi\n",
     "Cosine similarity uses the cosine of the angle between two sets of vectors to measure how similar they are."
    ]
   },
